--- a/src/Resources/assets/sass/admin.scss
+++ b/src/Resources/assets/sass/admin.scss
@@ -1,21 +1,21 @@
-.sms77-icon {
-  background-image: url("../images/sms77-20x20.png");
+.seven-icon {
+  background-image: url("../images/seven-20x20.png");
 }
 
 .menu-item {
-  .sms77-icon {
+  .seven-icon {
     filter: drop-shadow(10px 10px 10px white) brightness(0) invert(1) saturate(200%);
   }
 }
 
 .action {
-  .sms77-icon {
+  .seven-icon {
     filter: drop-shadow(10px 10px 10px #7D919A) brightness(0%);
   }
 }
 
 .active {
-  .sms77-icon, &.sms77-icon {
+  .seven-icon, &.seven-icon {
     filter: invert(46%) sepia(100%) saturate(3324%) hue-rotate(177deg) brightness(97%) contrast(89%);
   }
 }
